flux/observability/base/victoria-metrics/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway
  hostnames:
    - grafana.kubernetes.home
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: victoria-metrics-grafana
          port: 80
