flux/observability/base/victoria-metrics/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-grafana
spec:
  description: allow grafana ingress from agents and egress for plugins
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
    - fromEntities:
        - ingress
  egress:
    - toFQDNs:
        - matchName: grafana.com
        - matchName: storage.googleapis.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "8428"
              protocol: TCP
            - port: "9428"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vmagent
spec:
  description: allow victoria-metrics agent to access other pods
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmagent
  egress:
    - toEndpoints:
        - matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: In
              values:
                - victoria-metrics
                - kube-system
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "8428"
              protocol: TCP
            - port: "9429"
              protocol: TCP
            - port: "9428"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "9153"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vmsingle
spec:
  description: allow vmsingle ingress
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmsingle
  ingress:
    - fromEndpoints:
        - matchExpressions:
            - key: app.kubernetes.io/name
              operator: In
              values:
                - vmagent
                - grafana
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vlsingle
spec:
  description: allow vlsingle ingress
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vlsingle
  ingress:
    - fromEndpoints:
        - matchExpressions:
            - key: app.kubernetes.io/name
              operator: In
              values:
                - vmagent
                - vlagent
                - grafana
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vlagent
spec:
  description: allow vlagent ingress
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vlagent
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vlsingle
      toPorts:
        - ports:
            - port: "9428"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-state-metrics
spec:
  description: allow kube-state-metrics ingress
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-kube-dns-scrape
spec:
  description: allow kube-dns scraping
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
